# LLMFit

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: CMakeLists.txt  available_vram.cpp  available_vram.h  find_models_fit.cpp  find_models_fit.h  resource_path.h
src/platform/: CMakeLists.txt
src/platform/macos/: CMakeLists.txt  system_info.cpp  system_info.h
src/static/: inference_models.csv
